== 0.5.0

* Enhancements
  * Administrators can now allow applicants and trainees fill out annual information
  * Administrators can now export selected applicants information to a CSV file
  * Annual information can be filtered and exported to CSV
  * Minor layout changes

== 0.4.2

* Enhancements
  * Updated to Rails 3.2.8
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name
  * About page reformatted to include links to github and contact information

* Refactoring
  * Consistent sorting and display of model counts used across all objects, (applicants, preceptors, users)

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

* Bug Fix
  * Applicant sign up page now displays correctly

== 0.4.1

* Bug Fix
  * Failure to send emails in production no longer generate error messages

== 0.4.0

* Enhancements
  * Applicant updates
    * Degrees Earned now combines Degree, Institution, and Year of Graduation
      * Previous Institutions will be removed
    * Citizenship Status added with required alien registration number for permanent residents
    * Degree types can be specified using checkboxes
    * Names of professors writing letters of recommendations required
    * Gender has been added
    * Degree sought is now a radio button option
    * URM Types can now be specified on application
  * Update to Rails 3.2.6 and Contour 1.0.1
  * Updated Devise configuration files for devise 2.1.0

* Bug Fix
  * Administrators can now update applicant emails without going through the email confirmation/reconfirmation process

== 0.3.1

* Bug Fix
  * Initial setup now runs correctly: require 'securerandom'

== 0.3.0

* Enhancements
  * Applicants
    * can fall into either "predoc", "postdoc", or "summer" categories
    * can have a "personal statement" to fill out